# ffserve

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: actions.yaml
src/: command.rs  config.rs  main.rs  models.rs  processor.rs  web.rs
