[package]
name = "ffserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
awc = { version = "3", features = ["rustls"] }
rustls = "0.20.7"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
tokio = { version = "1.23", features = ["fs"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"
reqwest = { version = "0.11", default_features = false, features = ["blocking", "rustls-tls"] }
regex = "1"
